# ds_model_regretion_transaction_bank

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
notebooks/: proyecto_kaggle_transacciones_regresion_v2.ipynb
src/: evaluate.py  preprocess.py  train.py
src/api/: main.py  schemas.py
tests/: test_no_regression.py  test_preprocess.py
