[project]
name = "ds-model-regretion-transaction-bank"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn==1.5.2",
    "pandas==2.2.3",
    "numpy==1.26.4",
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "pydantic==2.10.4",
    "mlflow==2.19.0",
    "joblib==1.4.2",
]

[tool.vercel]
entrypoint = "src.api.main:app"
